--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "force": "^0.0.3",
+    "mongodb": "^6.3.0",
     "mongoose": "^5.13.22",
     "socket.io": "^4.0.1",
     "validator": "^13.11.0"
